04_Kubernetes/k8s-projects/Project 3 — Three-Tier E-Commerce Application/k8s/network-policy/backend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-policy
  namespace: ecommerce

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress
    - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend


  egress:
  - to: 
    - podSelector:
        matchLabels:
          app: postgres

  - to:
    - podSelector:
        matchLabels:
          app: redis
